# CSC3109_Project

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  project_requirements.md  pyproject.toml  requirements.txt
artifacts/: AGENTS.md  README.md
configs/: AGENTS.md  semantic_sam3_class_aware.yaml
data/: README.md
deployment/: .dockerignore  README.md  edge-inference-benchmarks.md
docs/: convnext-scratch-plan.md  dataset-notes.md  focalnet-plan.md  model_layout_standardization.md  repo-cleanup-notes.md  resnet18-scratch-plan.md  semantic_guided_best_recipe.md  team-roles.md
experiments/: results-log.md
model/: README.md  classes.json  resnet18_frozen_metadata.json
notebooks/: 02_swin_dino_results_summary.ipynb  02_swin_tiny_results_summary.ipynb  03_focalnet_training_and_evaluation.ipynb  04_resnet_convnext_results_summary.ipynb  05_semantic_guided_cgaf_quantisation.ipynb  05_swin_tiny_results_summary.ipynb  06_focalnet_training_and_evaluation.ipynb  06_lucas_mobile_first_semantic_guided_cnn_quantisation.ipynb  07_clip_peft_fft_comparison.ipynb  07_resnet_convnext_results_summary.ipynb  08_hetmcl_lite_quantisation.ipynb  09_resnet18_pretrained_transfer_learning.ipynb  10_convnext_pretrained.ipynb  10_resnet18_scratch_non_pretrained.ipynb  11_convnext_pretrained.ipynb  12_convnext_scratch_non_pretrained.ipynb  13_model_results_comparison.ipynb  AGENTS.md  README.md
reports/: README.md  phase2-eda-summary.md
scripts/: run_jupyter_server.sh
src/: __init__.py  config.py
tools/: AGENTS.md  check_semantic_dataset.py  compare_plan_compute.py  (+26 more)
(+410 files in other folders)
